2000-01-18 olicha	<olivier.chapuis@free.fr>
 	
	* fvwm/builtins.c (wait_func, recapture):
	* fvwm/cursor.{c,h} (setBusyCursor):
	* fvwm/function.{c,h}:
	* fvwm/fvwm.{c,h} (StartupStuff, InitVariables):
	* fvwm/menus.c (MenuInteraction, pop_menu_up):
	* fvwm/misc.{c,h} (GrabEm, UngrabEm):
	* fvwm/module_interface.c (ExecuteModuleSync):
	* fvwm/module_interface.c (ExecuteModuleSync):
	* fvwm/read.c (cursor_control, ReadFile, PipeRead):
	* fvwm/screen.h (ScreenInfo):
	Do so that we can disable the "Busy Cursor" patch
	
2000-01-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (execute_complex_function):
	fixed executing multiple immediate functions that need a target in a
	complex function

1999-01-18  Mikhael Goikhman  <migo@homemail.com>

	* libs/System.c (getFileStamp, setFileStamp, isFileStampChanged):
	* libs/fvwmlib.h:
	* libs/Picture.h (struct Picture):
	* libs/Picture.c (LoadPicture, CachePicture):
	Added an interface for verifying cached files by setting FileStamp,
	this fixed the problem of always using the old cached images,
	now every requested image should be up to date.

	* libs/ColorUtils.c (GetShadowColor): added absent "+ 50"

2000-01-17  olicha  <olivier.chapuis@free.fr>
	* fvwm/fvwm.c:
	Fixed a complet freeze at startup: ungrab the Busy Cursor at startup
	before the init fuctions are executed. If not, we've got a complet
	freeze if one of these functions does not finish.

2000-01-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/ColorUtils.c:
	added some colour caching logic; will fail miserably if used with a
	non-default colour map

	* fvwm/menus.c (MenuInteraction):
	prevent some unnecessary menu animations

	* fvwm/update.c:
	removed debug code

	* fvwm/menus.c (MenuInteraction):
	eliminate network traffic in idle menus

	* fvwm/style.c (ProcessNewStyle):
	fixed unnecessary icon update when style '*' is changed

2000-01-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (check_window_style_change):